<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inventario">

    <fragment
        android:id="@+id/nav_inventario"
        android:name="com.scout.appscout.ui.ui.inventario.InventarioFragment"
        android:label="@string/material"
        tools:layout="@layout/fragment_inventario" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.scout.appscout.ui.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.scout.appscout.ui.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>