<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".ui.RegistroActivity">
<!-- TODO: LANDSCAPE -->
    <EditText
        android:id="@+id/editTextRegistoEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRegistroNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegistoEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextRegistoEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistoEmail" />

    <EditText
        android:id="@+id/editTextRegistroApellidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegistroNombre"
        app:layout_constraintStart_toStartOf="@+id/editTextRegistroNombre"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistroNombre" />

    <EditText
        android:id="@+id/editTextRegistroContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegistroApellidos"
        app:layout_constraintStart_toStartOf="@+id/editTextRegistroApellidos"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistroApellidos" />

    <EditText
        android:id="@+id/editTextRegistroRepContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegistroContrasena"
        app:layout_constraintStart_toStartOf="@+id/editTextRegistroContrasena"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistroContrasena" />

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/registro"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegistroRepContrasena"
        app:layout_constraintStart_toStartOf="@+id/editTextRegistroRepContrasena"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistroRepContrasena" />
</androidx.constraintlayout.widget.ConstraintLayout>